# sglang-omni

./: .gitignore  DESIGN_ANALYSIS.md  README.html  README.md  REFACTORING_COMPLETE.md  TEST_STATUS.md  benchmark-results-en.md  benchmark-results.md  benchmark.md  change.md  comments.md  debate.md  evaluate.md  genindex.html  index.html  new_plan.md  objects.inv  plan.md  pyproject.toml  qwen-omni.yaml  reflection.md  results.md  run_5_rounds.sh  search.html  searchindex.js  test_file.webm  verify_test_interfaces.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
basic_usage/: qwen3_omni.html  tts_s2pro.html
benchmarks/: README.md  __init__.py  bench_pipeline.py  benchmark_omni.py  benchmark_qwen3_omni_wer.py  benchmark_relay.py  benchmark_s1_seed_tts.py  benchmark_s2pro_compile.py  benchmark_s2pro_seed_tts.py  benchmark_s2pro_speed.py  benchmark_tts.py  benchmark_tts_speed.py  eval_wer.py  plot_s2pro_results.py  prepare_dataset.py  profile_s2pro_sglang.py  relay.html  run.py
configs/: qwen3_omni_text_first.json
developer_reference/: apiserver_design.html  architecture.html  relay_design.html
docker/: Dockerfile
docs/: conf.py  index.rst  omni_engine_design.md  omni_engine_design_notes.md  omni_engine_progress.md  s2pro_perf_optimization_log.md
examples/: COSYVOICE3_MIGRATION_PLAN.md  debug_qwen3_omni_audio.py  qwen3_video_test.py  run_cosyvoice3_demo.py  run_fishaudio_e2e.py  run_ming_omni_server.py  run_ming_omni_speech.py  run_ming_omni_speech_server.py  run_ming_omni_text_first.py  run_minicpm_o_speech.py  run_minicpm_v_server.py  (+12 more)
(+532 files in other folders)
