[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sglang-omni"
version = "0.1.0"
description = "Multi-stage pipeline framework for omni models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pyzmq>=25.0.0",          # ZMQ messaging for control plane
    "msgpack>=1.0.0",         # Message serialization
    "numpy>=1.24.0",          # Array operations
    "pydantic>=2.0.0",        # Data validation and serialization
    "torch>=2.9.1",           # PyTorch for tensor operations
    "transformers>=4.57.0",   # HF models/tokenizers
    "pillow>=10.0.0",         # Required by AutoImageProcessor
    "librosa>=0.10.2",        # Audio loading/resampling for HF audio utils
    "soundfile>=0.12.1",      # Backend used by librosa/HF audio utils
    "soxr>=0.3.7",            # High-quality resampling used by HF audio utils
    "huggingface-hub>=0.36.0",# HF model downloads
    "fastapi>=0.110.0",       # OpenAI-compatible API adapter
    "uvicorn>=0.23.0",        # ASGI server for FastAPI
    # Testing dependencies
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "nixl",
    "logger",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sglang_omni*"]
